[package]
name = "grub-core"
publish = false
version = "0.0.0"
authors = ["Alexander Poole"]
description = "..."
repository = "https://github.com/owodunni/grub"
documentation = "https://docs.rs/grub/core"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
